--- a/mmaps.html
+++ b/mmaps.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
 <html>
   <head>
-  <script type='text/javascript' src='mmaps.js'></script>
-  <link href='mmaps.css' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type='text/javascript' src='mmaps.js'></script>
+    <script type='text/javascript' src='jquery-1.10.2.min.js'></script>
   </head>
   <body>
-    <div id="map"></div>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNu2HVujRe2uySa8xVBBGkcgLg25anbkU&callback=initMap">
-    </script>
+    <div id="regions_div" style="width: 900px; height: 500px;"></div>
   </body>
+  <script type='text/javascript'>initMap();</script>
 </html>
