--- a/mmaps.html
+++ b/mmaps.html
@@ -3,9 +3,14 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type='text/javascript' src='mmaps.js'></script>
     <script type='text/javascript' src='jquery-1.10.2.min.js'></script>
+    <link href='mmaps.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="regions_div" style="width: 900px; height: 500px;"></div>
+    <div id="container">
+      <div id="inner">
+	<div id="regions_div" style="width: 900px; height: 500px;"></div>
+      </div>
+    </div>
   </body>
   <script type='text/javascript'>initMap();</script>
 </html>
