--- a/mmaps.html
+++ b/mmaps.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type='text/javascript' src='films.js'></script>
     <script type='text/javascript' src='mmaps.js'></script>
     <script type='text/javascript' src='jquery-1.10.2.min.js'></script>
     <link href='mmaps.css' rel='stylesheet' type='text/css'>
