--- a/mmaps.html
+++ b/mmaps.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>The World of Films & Cocktails</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type='text/javascript' src='films.js'></script>
     <script type='text/javascript' src='mmaps.js'></script>
