The film titles are in utf-8

--- a/mmaps.html
+++ b/mmaps.html
@@ -3,7 +3,7 @@
     <meta charset='utf-8'>
     <title>The World of Films & Cocktails</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type='text/javascript' src='films.js'></script>
+    <script type='text/javascript' src='films.js' charset='utf-8'></script>
     <script type='text/javascript' src='mmaps.js'></script>
     <script type='text/javascript' src='jquery-1.10.2.min.js'></script>
     <link href='mmaps.css' rel='stylesheet' type='text/css'>
